--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,7 @@ services:
       - "/tmp/.X11-unix"
     environment:
       DISPLAY: "unix:0"
+    cap_add:
+      - SYS_PTRACE
+    privileged: true
     command: /opt/clion-2018.2.5/bin/clion.sh
